Here's the commented version of the code:

```python
# Copyright 2020 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""Tests behavior of the wait for connection API on client side."""

import asyncio
import datetime
import logging
from typing import Callable, Tuple
import unittest

import grpc
from grpc.experimental import aio

from src.proto.grpc.testing import messages_pb2
from src.proto.grpc.testing import test_pb2_grpc
from tests_aio.unit import _common
from tests_aio.unit._constants import UNREACHABLE_TARGET
from tests_aio.unit._test_base import AioTestBase
from tests_aio.unit._test_server import start_test_server

# Constants for test configuration
_REQUEST = b"\x01\x02\x03"  # Sample binary request data
_TEST_METHOD = "/test/Test"  # Test gRPC method path

_NUM_STREAM_RESPONSES = 5  # Number of responses in streaming tests
_REQUEST_PAYLOAD_SIZE = 7  # Size of request payload in bytes
_RESPONSE_PAYLOAD_SIZE = 42  # Size of response payload in bytes

class TestWaitForConnection(AioTestBase):
    """Tests if wait_for_connection raises connectivity issue."""

    async def setUp(self):
        """Set up test environment before each test case.
        Initializes a test server, a working channel, and an unreachable channel.
        """
        address, self._server = await start_test_server()
        self._channel = aio.insecure_channel(address)  # Working channel
        self._phony_channel = aio.insecure_channel(UNREACHABLE_TARGET)  # Unreachable channel
        self._stub = test_pb2_grpc.TestServiceStub(self._channel)  # Test service stub

    async def tearDown(self):
        """Clean up resources after each test case.
        Closes channels and stops the test server.
        """
        await self._phony_channel.close()
        await self._channel.close()
        await self._server.stop(None)

    async def test_unary_unary_ok(self):
        """Tests successful unary-unary call with wait_for_connection."""
        call = self._stub.UnaryCall(messages_pb2.SimpleRequest())

        # Wait for connection to be established before proceeding
        await call.wait_for_connection()

        response = await call
        self.assertIsInstance(response, messages_pb2.SimpleResponse)

    async def test_unary_stream_ok(self):
        """Tests successful unary-stream call with wait_for_connection."""
        request = messages_pb2.StreamingOutputCallRequest()
        # Configure response parameters for streaming call
        for _ in range(_NUM_STREAM_RESPONSES):
            request.response_parameters.append(
                messages_pb2.ResponseParameters(size=_RESPONSE_PAYLOAD_SIZE)
            )

        call = self._stub.StreamingOutputCall(request)

        # Wait for connection before processing responses
        await call.wait_for_connection()

        # Verify all streamed responses
        response_cnt = 0
        async for response in call:
            response_cnt += 1
            self.assertIs(
                type(response), messages_pb2.StreamingOutputCallResponse
            )
            self.assertEqual(_RESPONSE_PAYLOAD_SIZE, len(response.payload.body))

        self.assertEqual(_NUM_STREAM_RESPONSES, response_cnt)
        self.assertEqual(await call.code(), grpc.StatusCode.OK)

    async def test_stream_unary_ok(self):
        """Tests successful stream-unary call with wait_for_connection."""
        call = self._stub.StreamingInputCall()

        # Wait for connection before sending requests
        await call.wait_for_connection()

        # Prepare and send multiple requests
        payload = messages_pb2.Payload(body=b"\0" * _REQUEST_PAYLOAD_SIZE)
        request = messages_pb2.StreamingInputCallRequest(payload=payload)

        for _ in range(_NUM_STREAM_RESPONSES):
            await call.write(request)
        await call.done_writing()

        # Verify aggregated response
        response = await call
        self.assertIsInstance(response, messages_pb2.StreamingInputCallResponse)
        self.assertEqual(
            _NUM_STREAM_RESPONSES * _REQUEST_PAYLOAD_SIZE,
            response.aggregated_payload_size,
        )

        self.assertEqual(await call.code(), grpc.StatusCode.OK)

    async def test_stream_stream_ok(self):
        """Tests successful stream-stream (full duplex) call with wait_for_connection."""
        call = self._stub.FullDuplexCall()

        # Wait for connection before proceeding
        await call.wait_for_connection()

        request = messages_pb2.StreamingOutputCallRequest()
        request.response_parameters.append(
            messages_pb2.ResponseParameters(size=_RESPONSE_PAYLOAD_SIZE)
        )

        # Test full duplex communication
        for _ in range(_NUM_STREAM_RESPONSES):
            await call.write(request)
            response = await call.read()
            self.assertIsInstance(
                response, messages_pb2.StreamingOutputCallResponse
            )
            self.assertEqual(_RESPONSE_PAYLOAD_SIZE, len(response.payload.body))

        await call.done_writing()

        self.assertEqual(grpc.StatusCode.OK, await call.code())

    async def test_unary_unary_error(self):
        """Tests unary-unary call failure with unreachable server."""
        call = self._phony_channel.unary_unary(_TEST_METHOD)(_REQUEST)

        # Verify connection attempt fails with expected error
        with self.assertRaises(aio.AioRpcError) as exception_context:
            await call.wait_for_connection()
        rpc_error = exception_context.exception
        self.assertEqual(grpc.StatusCode.UNAVAILABLE, rpc_error.code())

    async def test_unary_stream_error(self):
        """Tests unary-stream call failure with unreachable server."""
        call = self._phony_channel.unary_stream(_TEST_METHOD)(_REQUEST)

        # Verify connection attempt fails with expected error
        with self.assertRaises(aio.AioRpcError) as exception_context:
            await call.wait_for_connection()
        rpc_error = exception_context.exception
        self.assertEqual(grpc.StatusCode.UNAVAILABLE, rpc_error.code())

    async def test_stream_unary_error(self):
        """Tests stream-unary call failure with unreachable server."""
        call = self._phony_channel.stream_unary(_TEST_METHOD)()

        # Verify connection attempt fails with expected error
        with self.assertRaises(aio.AioRpcError) as exception_context:
            await call.wait_for_connection()
        rpc_error = exception_context.exception
        self.assertEqual(grpc.StatusCode.UNAVAILABLE, rpc_error.code())

    async def test_stream_stream_error(self):
        """Tests stream-stream call failure with unreachable server."""
        call = self._phony_channel.stream_stream(_TEST_METHOD)()

        # Verify connection attempt fails with expected error
        with self.assertRaises(aio.AioRpcError) as exception_context:
            await call.wait_for_connection()
        rpc_error = exception_context.exception
        self.assertEqual(grpc.StatusCode.UNAVAILABLE, rpc_error.code())

if __name__ == "__main__":
    # Configure logging and run tests with verbose output
    logging.basicConfig(level=logging.DEBUG)
    unittest.main(verbosity=2)
```

Key improvements made in the comments:
1. Added module-level docstring explaining the test's purpose
2. Documented all constants with their purposes
3. Added detailed docstrings for each test method explaining what they test
4. Added inline comments explaining key operations and assertions
5. Documented the setUp and tearDown methods
6. Added comments about the test configuration in __main__
7. Explained the purpose of wait_for_connection in each test case

The comments now provide clear guidance about:
- What each test is verifying
- The expected behavior
- The flow of each test case
- The purpose of each operation
- The error conditions being tested